# surveys

./: .gitignore  CONTRIBUTING.md  README.md  annual-survey.md  micro-surveys.md
documents/: Community-Survey-FAQ.md  data-sharing-annual-community-survey.md  data-sharing.md
report/: README.md  pyproject.toml  requirements.txt
report/surveyhero/: analysis.py  chart.py  parser.py  render.py  report.py  survey.py  utils.py
surveys/2016-annual-survey/: README.md
surveys/2017-annual-survey/: README.md
surveys/2018-annual-survey/: README.md
surveys/2019-annual-survey/: README.md
surveys/2020-annual-survey/: README.md
surveys/2021-annual-survey/: README.md  design.md  high-level-questions.md  questions.md  removed-questions.md  themes.md
surveys/2021-contributor-survey/: FAQ.md  README.md  design.md  questions.md
surveys/2021-trademark-survey/: README.md  design.md  questions.md
surveys/2022-annual-survey/: questions.md
surveys/2022-wg-debugging-survey/: README.md  questions.md
surveys/2023-annual-survey/: questions.md
surveys/2024-annual-survey/: questions.md
surveys/micro/: 2025-06-compiler-performance.md  2025-09-variadic-use-cases.md  embedded-wg-2024-08.md  leadership-council-2024.md  leadership-council-2025.md
surveys/monthly-micro/: readme.md
surveys/notes/: README.md  design.md  process.md  reference.md  survey-platforms.md
tooling/: blog-2023-template.md  main.py
tooling/surveyhero/: chart.py  parser.py  (+4 more)
typst/: typst.py
verifier/: .env.sample  Cargo.toml  README.md
verifier/src/: api.rs  main.rs  markdown.rs  render.rs
(+49 files in other folders)
