[package]
name = "verifier"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
structopt = "0.3"
env_logger = "0.11"
log = "0.4"
regex = "1.11"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls-webpki-roots"], default-features = false }
serde = { version = "1", features = ["derive"] }
